/iTrade/ChangeLog
===============================================================================

On the road for v0.4.5 (Nausicaa)

===============================================================================

2006-06-04  Gilles Dumortier <dgil@ieee.org>
	* Yahoo plugin : ask and bid (SF bug 1497343). Activate live for yahoo
	* News : scan / clear button definitions (SF bug 1480417)
	* main currency in portfolio editing : use a combobox also
	* NYSE and LSE + filter market name using combobox (SF bug 1473358)
	* itrade_import.py was not working anymore ?! typo ?!

2006-06-03  Gilles Dumortier <dgil@ieee.org>
	* Context Help in wxDialog (SF bug 1410679)

2006-06-01  Gilles Dumortier <dgil@ieee.org>
	* currency front-end (SF bug 1470719)
	* currency back-end (SF bug 1470718)
	* number of shares display : use also separator (i.e. SF bug 1497092)

2006-05-29  Gilles Dumortier <dgil@ieee.org>
	* Volume display : use separator (SF bug 1497092)
	* move list stuff from itrade_wxquote.py to itrade_wxlistquote.py

2006-05-28  Gilles Dumortier <dgil@ieee.org>
	* Portfolio : remove a value : some issues on matrix (SF bug 1458054)
	* Quote view : bad display (time/hours) (SF bug 1424415)
	* Remove CVS $id$ in source file (SF bug 1496343)
	* Import plugin : number of years (SF bug 1485060)
	* continue to work on v0.4.5 release :-)

===============================================================================
2006-05-28  Gilles Dumortier <dgil@ieee.org>

	OFFICIAL release v0.4.2
		SVN tag : ITRADE_0_4_2_COCA2
		SVN branch : ITRADE_0_4_2_COCA2_BRANCH

	* live connector is deprecated because link has been securized :-(

2006-05-11  Gilles Dumortier <dgil@ieee.org>
	* Portfolio evaluation : Divide by Zero (SF bug 1486241)
	* Add public registration for a quote (SF bug 1486243) (privately then
	  publicly listed on the market or exchange shares from private to
	  public company). Tax side will be implemented at later time ...

2006-05-08  Gilles Dumortier <dgil@ieee.org>